# NRFGate

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FLOWCHART.md  prj.conf
esp32/: main.c  platformio.ini  sdkconfig.defaults
inc/: ble_mesh_handler.h  ble_nus.h  data_handler.h  lora_handler.h  main.h  mesh_keys.h.example  mesh_parser.h  model_handler.h  rule_engine.h  semantic_handler.h  thread_handler.h  wire_format.h
inc/core/: command_router.h  event_ingest.h  gw_adapter.h  gw_addr.h  gw_model.h  gw_store.h  nus_handler.h  reliability_manager.h  rule_engine.h  scheduler.h  semantic_handler.h  transport_port.h
inc/drivers/: ble_nus.h  mesh_ctrl.h
inc/transports/ble_mesh/: ble_mesh_adapter.h  ble_mesh_codec.h  ble_mesh_prov.h
inc/transports/lorawan/: lora_wire_format.h  lorawan_adapter.h
inc/transports/thread/: thread_adapter.h  thread_codec.h
src/: ble_mesh_handler.c  ble_nus.c  data_handler.c  lora_handler.c  main.c  mesh_ctrl.c  mesh_ctrl.h  mesh_parser.c  model_handler.c  rule_engine.c  semantic_handler.c  thread_handler.c  wire_format.c
src/core/: command_router.c  event_ingest.c  gw_addr.c  gw_store.c  nus_handler.c  reliability_manager.c  rule_engine.c  scheduler.c  semantic_handler.c  transport_port.c
src/drivers/: ble_nus.c
src/transports/ble_mesh/: ble_mesh_adapter.c  ble_mesh_codec.c  ble_mesh_prov.c
src/transports/lorawan/: lora_wire_format.c  lorawan_adapter.c
src/transports/thread/: thread_adapter.c  thread_codec.c
tests/: CMakeLists.txt  readme.md  test_logic.c
tests/unit/common/: ble_nus.h  main.h  mesh_ctrl.h  rule_engine.h  test_stubs.h  thread_handler.h
tests/unit/test_ble_mesh_tlv/: CMakeLists.txt  testcase.yaml
tests/unit/test_ble_mesh_tlv/src/: main.c
tests/unit/test_coap_parser/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/test_coap_parser/src/: main.c
tests/unit/test_data_handler/: CMakeLists.txt  prj.conf
tests/unit/test_data_handler/src/: main.c
tests/unit/test_gw_store/: CMakeLists.txt  testcase.yaml
tests/unit/test_gw_store/src/: main.c
tests/unit/test_mesh_parser/: CMakeLists.txt
tests/unit/test_mesh_parser/src/: main.c
tests/unit/test_node_wire/: CMakeLists.txt
tests/unit/test_node_wire/src/: main.c
tests/unit/test_nus_handler/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/test_nus_handler/src/: main.c
tests/unit/test_rule_engine/: CMakeLists.txt  testcase.yaml
tests/unit/test_rule_engine/src/: main.c
tests/unit/test_semantic/: CMakeLists.txt
tests/unit/test_semantic/src/: main.c
tests/unit/test_semantic_handler/: CMakeLists.txt  testcase.yaml
tests/unit/test_semantic_handler/src/: main.c  test_semantic_stubs.h
tests/unit/test_wire_format/: CMakeLists.txt  testcase.yaml
tests/unit/test_wire_format/src/: main.c
tools/: graphify  graphify.bat  graphify.py  requirements.txt
